# emircoin

./: .appveyor.yml  .drone.yml  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  autogen.sh  cleandb.sh  configure.ac  libemircoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: lint_04_install.sh  lint_05_before_script.sh  lint_06_script.sh  test_03_before_install.sh  test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build_msvc/: README.md  emircoin_config.h  libsecp256k1_config.h  msvc-autogen.py
contrib/: README.md  emircoin-cli.bash-completion  emircoin-tx.bash-completion  emircoind.bash-completion  gitian-build.py  install_db4.sh
depends/: Makefile  README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  emircoin-conf.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-14054.md  release-notes-15566.md  release-notes-15637.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  emircoin-cli.1  emircoin-qt.1  emircoin-tx.1  emircoin-wallet.1  emircoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  addrdb.cpp  (+147 more)
(+742 files in other folders)
