dist_man1_MANS=

if BUILD_EMIRCOIND
  dist_man1_MANS+=emircoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=emircoin-qt.1
endif

if BUILD_EMIRCOIN_CLI
  dist_man1_MANS+=emircoin-cli.1
endif

if BUILD_EMIRCOIN_TX
  dist_man1_MANS+=emircoin-tx.1
endif

if ENABLE_WALLET
if BUILD_EMIRCOIN_WALLET
  dist_man1_MANS+=emircoin-wallet.1
endif
endif
